# red-utils

./: .gitignore  .pre-commit-config.yaml  .pre-commit.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  README.md  demo.py  diskcache_test.py  git-clean.sh  git_prune.py  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  pytest.ini  requirements.ci.txt  requirements.dev.txt  requirements.txt  ruff.ci.toml  ruff.toml  sitemap.xml  tox.ini
.github/workflows/: build.yml  export-requirements.yml  format.yml  github-prepare-release.yml  github-release.yml  lint-format.yml  make-pypi-test-release.yml  make-release.yml  pdm-lint-format.yml  prepare-release.yml  python-publish.yml  python-publish.yml.bak  test.yml  tests.yml  tests.yml.bak  wip_new-release.yml
_OLD_CODE/: docs.Dockerfile  pytest.ini
_OLD_CODE/.github/workflows/: publish-pypi.yml
_OLD_CODE/requirements/: requirements.tests.txt
_OLD_CODE/tests/: conftest.py  test_hash_utils.py  test_httpx_utils.py  test_sqlalchemy_utils.py  test_time_utils.py  test_uuid_utils.py
_OLD_CODE/tests/fixtures/: __init__.py
dev/developing/: index.html
dev/extending/: index.html
dev/publishing/: index.html
docs/: developing.md  extending.md  gen_ref_pages.py  git_prune_script.md  index.md  requirements.txt  stdlib-reference.md
docs/dev/: developing.md  extending.md  publishing.md
docs/red_utils.ext/: ext_utils.md
git_prune_script/: index.html
red-utils/: __init__.py
red-utils/fastapi_utils/: __init__.py  constants.py
red-utils/httpx_utils/: validators.py
red-utils/loguru_utils/: sinks.py
red-utils/msgpack_utils/: constants.py
red_utils/: __init__.py  __main__.py
red_utils/context_managers/: __init__.py
red_utils/context_managers/benchmarks/: __init__.py  fn_benchmarks.py
red_utils/context_managers/database_managers/: __init__.py  sqlite_managers.py
red_utils/context_managers/object_managers/: __init__.py  protect.py
red_utils/core/: __init__.py  constants.py
red_utils/core/dataclass_utils/: __init__.py
red_utils/dict_utils/: __init__.py  pyproject.toml
red_utils/dict_utils/src/: __init__.py  operations.py  validators.py
red_utils/diskcache_utils/: __init__.py  operations.py  pyproject.toml  validators.py
red_utils/diskcache_utils/src/: __init__.py  operations.py
red_utils/exc/: __init__.py  base.py  generic.py
red_utils/ext/: __init__.py
red_utils/ext/arrow_utils/: operations.py
red_utils/ext/context_managers/: __init__.py
red_utils/ext/diskcache_utils/: __init__.py  __main__.py  classes.py  constants.py  operations.py  validators.py
red_utils/ext/fastapi_utils/: dependencies.py  operations.py
red_utils/ext/httpx_utils/: __init__.py  classes.py  constants.py  operations.py  validators.py
red_utils/ext/loguru_utils/: __init__.py  constants.py  enums.py  operations.py  sinks.py  validators.py
red_utils/ext/msgpack_utils/: classes.py  operations.py
red_utils/ext/pendulum_utils/: __init__.py  constants.py  operations.py  validators.py
red_utils/ext/pydantic_utils/: __main__.py
red_utils/ext/sqlalchemy_utils/: README.md
red_utils/ext/time_utils/: __init__.py
red_utils/fastapi_utils/: __init__.py  constants.py  dependencies.py  healthcheck.py  operations.py  pyproject.toml  uvicorn_override.py  validators.py
red_utils/fastapi_utils/src/: __init__.py  constants.py  healthcheck.py  operations.py  tag_definitions.py  validators.py
red_utils/file_utils/: __init__.py  operations.py  pyproject.toml
red_utils/file_utils/src/: __init__.py  constants.py  operations.py
red_utils/hash_utils/: README.md  __init__.py  operations.py  pyproject.toml
red_utils/hash_utils/src/: operations.py
red_utils/httpx_utils/: __init__.py  constants.py  operations.py  pyproject.toml  validators.py
red_utils/httpx_utils/src/: __init__.py  operations.py  validators.py
red_utils/loguru_utils/: README.md  __init__.py  constants.py  operations.py  pyproject.toml  uvicorn_override.py  validators.py
red_utils/loguru_utils/src/: __init__.py  validators.py
red_utils/msgpack_utils/: README.md  __init__.py  operations.py  pyproject.toml
red_utils/msgpack_utils/src/: __init__.py  operations.py
red_utils/pydantic_utils/: sqlalchemy_parser.py
red_utils/sqlalchemy_utils/: __init__.py  connection_models.py  constants.py  custom_types.py  utils.py
red_utils/std/: __init__.py
red_utils/std/context_managers/: __main__.py
red_utils/time_utils/: __init__.py  constants.py  operations.py  pyproject.toml
red_utils/utils/: __init__.py
red_utils/uuid_utils/: README.md  __init__.py  classes.py  constants.py  operations.py  pyproject.toml  validators.py
reference/SUMMARY/: index.html
requirements/: requirements.dev.txt  requirements.tests.txt  requirements.txt
sandbox/demo/: demo.py
sandbox/ext_demo/: diskcache_ex.py  ext_demo.py  httpx_ex.py  loguru_ex.py  msgpack_ex.py  pandas_ex.py  pyproject.toml
search/: search_index.json
shared/core/: pyproject.toml
shared/red-utils-core/: pyproject.toml
shared/red-utils-core/src/core/setup/: __setup.py
shared/red-utils-core/src/red_utils/core/dataclass_utils/: __init__.py
shared/red-utils-core/src/red_utils/core/setup/: __init__.py
src/red_utils/: __init__.py  __main__.py
templates/cookiecutter/red_utils/package/ext/{{cookiecutter.project_name}}/: README.md  pyproject.toml
templates/cookiecutter/red_utils/package/ext/{{cookiecutter.project_name}}/src/red_utils/ext/: __init__.py
templates/cookiecutter/red_utils/package/shared/{{cookiecutter.project_name}}/: pyproject.toml
templates/cookiecutter/red_utils/package/std/{{cookiecutter.project_name}}/: README.md  pyproject.toml
testing/nested/: script.py
tests/: REAMDE.md  __init__.py  conftest.py  test_dict_utils.py  test_file_utils.py  test_httpx_utils.py  test_path_utils.py  test_sqlalchemy_utils.py  test_time_utils.py
tests/file_util_tests/: __init__.py  expect_fail_tests.py  expect_pass_tests.py
tests/fixtures/: __init__.py  path_fixtures.py
tests/path_util_tests/: expect_fail_tests.py  expect_pass_tests.py
tests/std_tests/: __init__.py
(+526 files in other folders)
