[project]
name = "red_utils"
version = "0.2.18"
description = "Collection of utility scripts/functions that I use frequently."
authors = [
    { name = "redjax", email = "none@none.com" },
    { name = "redjax", email = "jackenyon@gmail.com" },
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/redjax/red-utils"
Documentation = "https://red-utils.readthedocs.io/en/latest/"

[project.optional-dependencies]
standard = ["msgpack>=1.0.8", "loguru>=0.7.2"]
database = ["sqlalchemy>=2.0.28", "alembic>=1.13.1"]

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.13",
    "pytest>=7.4.4",
    "black>=23.12.1",
    "pre-commit>=3.6.0",
    "pdm-bump>=0.7.3",
    "nox>=2023.4.22",
    "pytest-xdist>=3.5.0",
    "pygments>=2.17.2",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.4",
    "mkdocstrings[python]>=0.24.0",
    "markdown-include>=0.8.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-autorefs>=0.5.0",
    "mkdocs-section-index>=0.3.8",
    "mkdocs-literate-nav>=0.6.1",
]

[tool.pdm.scripts]

tests = { cmd = "nox -s tests" }

git-prune-tags = { cmd = "git fetch --prune origin '+refs/tags/*:refs/tags/*'" }

sort-imports = { shell = "pdm run ruff check --select I --fix ." }

lint = { cmd = "nox -s lint" }

lint-ci = { shell = "pdm run black . && RUFF_CONFIG=ruff.ci.toml pdm run ruff check . --fix" }

check = { cmd = "black ." }

format = { cmd = "ruff check . --fix" }

export = { shell = "pdm export --prod --no-default -o requirements.txt --without-hashes" }

export-dev = { shell = "pdm export -d --no-default -o requirements.dev.txt --without-hashes" }

export-ci = { shell = "pdm export -G ci --no-default -o requirements.ci.txt --without-hashes" }

export-docs = { shell = "pdm export -G docs --no-default -o docs/requirements.txt --without-hashes" }

## BUMP.x.x
create-major-release = { shell = "pdm bump major && pdm bump tag && pdm lock && pdm build && git push --tags" }

## x.BUMP.x
create-minor-release = { shell = "pdm bump minor && pdm bump tag && pdm lock && pdm build && git push --tags" }

## x.x.BUMP
create-micro-release = { shell = "pdm bump micro && pdm bump tag && pdm lock && pdm build && git push --tags" }

upload-pypi = { shell = "pdm lock && pdm publish --repository pypi --verbose" }

upload-pypi-test = { shell = "pdm lock && pdm publish --repository testpypi --verbose" }

docs-build = { cmd = "mkdocs build" }

docs-serve = { cmd = "mkdocs serve --dev-addr 0.0.0.0:8000" }
