[project]
name = "red-utils"
version = "0.2.25"
description = "Collection of utility scripts/functions that I use frequently."
authors = [
    { name = "redjax", email = "none@none.com" },
    { name = "redjax", email = "jackenyon@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ext-httpx-utils",
]

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/redjax/red-utils"
Documentation = "https://red-utils.readthedocs.io/en/latest/"
Download = "https://pypi.org/project/red_utils/"

[tool.uv]
dev-dependencies = [
    "cookiecutter>=2.6.0",
    "core",
    "ext-context-managers",
    "ext-httpx-utils",
    "ext-pandas-utils",
    "std-context-managers",
    "std-dict-utils",
    "std-hash-utils",
    "std-list-utils",
    "std-logging-utils",
    "std-time-utils",
]

[tool.uv.workspace]
members = ["shared/*", "packages/*"]
exclude = ["sandbox/*", "templates/*"]

[tool.uv.sources]

## Shared/
core = { workspace = true }

## Packages/
### Packages/std
std-context-managers = { workspace = true }
std-dict-utils = { workspace = true }
std-hash-utils = { workspace = true }
std-list-utils = { workspace = true }
std-logging-utils = { workspace = true }
std-time-utils = { workspace = true }

### Packages/ext
ext-context-managers = { workspace = true }
ext-httpx-utils = { workspace = true }
ext-pandas-utils = { workspace = true }

## Fix 'error: Multiple top-level packages discovered in flat-layout'
#  https://github.com/pypa/setuptools/issues/3197#issuecomment-1078770109
[tool.setuptools]
py-modules = []

###############
# Ruff Config #
###############

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "D",    # pydocstyle
    "E",    # pycodestyle
    "F401", # remove unused imports
    "I",    # isort
    "I001", # Unused imports
]
ignore = [
    "D100", # missing-docstring-in-public-module
    "D101", # missing-docstring-in-public-class
    "D102", # missing-docstring-in-public-method
    "D103", # Missing docstring in public function
    "D105", # Missing docstring in magic method
    "D106", # missing-docstring-in-public-nested-class
    "D107", # Missing docstring in __init__
    "D200", # One-line docstring should fit on one line
    "D203", # one-blank-line-before-class
    "D205", # 1 blank line required between summary line and description
    "D213", # multi-line-summary-second-line
    "D401", # First line of docstring should be in imperative mood
    "E402", # Module level import not at top of file
    "D406", # Section name should end with a newline
    "D407", # Missing dashed underline after section
    "D414", # Section has no content
    "D417", # Missing argument descriptions in the docstring for [variables]
    "E501", # Line too long
    "E722", # Do not use bare `except`
    "F401", # imported but unused
]
fixable = [
    "C",
    "D",    # pydocstyle
    "E",    # pycodestyle-error
    "E402", # Module level import not at top of file
    "F401", # unused imports
    "I",    # isort
    "N",    # pep8-naming
    "T",
    "W",    # pycodestyle-warning
    "ERA",  # eradicate
    "PL",   # pylint
    "RUF",  # ruf-specific rules
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",   # pyupgrade
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "*.pyc",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
force-wrap-aliases = true
lines-after-imports = 1
order-by-type = true
relative-imports-order = "closest-to-furthest"
required-imports = ["from __future__ import annotations"]
section-order = [
    "future",
    "standard-library",
    "first-party",
    "local-folder",
    "third-party",
]
