[project]
name = "httpx_utils"
version = "0.1.0"
description = ""
authors = [
    {name = "redjax", email = "none@none.com"},
]
dependencies = [
    "httpx>=0.24.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
