[project]
name = "msgpack_utils"
version = "0.1.0"
description = ""
authors = [
    {name = "redjax", email = "none@none.com"},
]
dependencies = [
    "msgpack>=1.0.5",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
