[project]
name = "red-utils-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

# [project.scripts]
# hello = "red_utils_core:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

## Fix ValueError about hatch being unable to determine which files to ship inside the wheel.
[tool.hatch.build.targets.wheel]
packages = ["red_utils.core"]